src/objects/T_CMT_Email_Address_Language_Dependency__mdt.object
<CustomObject>
    <description>This custom metadata type stores all the email address and their corresponding languages.</description>
    <fields>
        <fullName>Priority__c</fullName>
        <description>Priority of the email address used when we route the case to the appropriate queue</description>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Queue_Name__c</fullName>
        <label>Queue Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Concern__c</fullName>
        <description>This field is used to reference the concern related to the email address</description>
        <label>Concern</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Email_Address__c</fullName>
        <description>This field is used to store the email address that needs to be checked.</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>T_Language__c</fullName>
        <description>This field is used to store the language of the corresponding email address</description>
        <label>Language</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Question__c</fullName>
        <description>This field is used to reference the concern related to the email address</description>
        <label>Question</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>T_Service__c</fullName>
        <description>This field is used to reference the service related to the email address</description>
        <label>Service</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <label>Email Address Language Dependency</label>
    <pluralLabel>Email Adress Language Dependencies</pluralLabel>
</CustomObject>